--- a/ChickenTinder/ChickenTinder/Client/wwwroot/index.html
+++ b/ChickenTinder/ChickenTinder/Client/wwwroot/index.html
@@ -12,6 +12,7 @@
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <script src="https://kit.fontawesome.com/143b14194d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -24,6 +25,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script>https://hammerjs.github.io/dist/hammer.min.js</script>
 </body>
 
 </html>
