--- a/ChickenTinder/ChickenTinder/Client/wwwroot/index.html
+++ b/ChickenTinder/ChickenTinder/Client/wwwroot/index.html
@@ -25,7 +25,8 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
-    <script>https://hammerjs.github.io/dist/hammer.min.js</script>
+    <script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
+    <script src="swipejs.js"></script>
 </body>
 
 </html>
