Added Share Back end

--- a/ChickenTinder/ChickenTinder/Client/wwwroot/index.html
+++ b/ChickenTinder/ChickenTinder/Client/wwwroot/index.html
@@ -28,6 +28,7 @@
     <script>navigator.serviceWorker.register('service-worker.js');</script>
     <script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
     <script src="swipejs.js"></script>
+    <script src="interloop.js"></script>
 </body>
 
 </html>
