--- a/ChickenTinder/ChickenTinder/Client/wwwroot/index.html
+++ b/ChickenTinder/ChickenTinder/Client/wwwroot/index.html
@@ -2,6 +2,31 @@
 <html lang="en">
 
 <head>
+    <style>
+        #spinner {
+            border: 16px solid silver;
+            border-top: 16px solid #337AB7;
+            border-radius: 50%;
+            width: 200px;
+            height: 200px;
+            animation: spin 1500ms linear infinite;
+            transform: translate(-50%,50%);
+            left: 50%;
+            position: absolute;
+            margin-top: 20px
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg)
+            }
+
+            100% {
+                transform: rotate(360deg)
+            }
+        }
+    </style>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>ChickenTinder</title>
@@ -17,18 +42,24 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+        <div id="spinner">
+            <img src="/icon-192.png" />
+        </div>
+    </div>
+
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <script src="swipejs.js"></script>
+    <script src="interloop.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
     <script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
-    <script src="swipejs.js"></script>
-    <script src="interloop.js"></script>
+
 </body>
 
 </html>
