--- a/ChickenTinder/ChickenTinder/Client/wwwroot/index.html
+++ b/ChickenTinder/ChickenTinder/Client/wwwroot/index.html
@@ -35,12 +35,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>ChickenTinder</title>
     <base href="/" />
+    <link rel="shortcut icon" href="/favicon-1.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon-1.ico" type="image/x-icon">
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="ChickenTinder.Client.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
-    <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="icon-512-full.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="icon-192-full.png" />
     <script src="https://kit.fontawesome.com/143b14194d.js" crossorigin="anonymous"></script>
 </head>
 
