fixed memory leaks

--- a/ChickenTinder/ChickenTinder/Client/wwwroot/index.html
+++ b/ChickenTinder/ChickenTinder/Client/wwwroot/index.html
@@ -61,6 +61,7 @@
     </div>
 
     <script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="swipejs.js"></script>
     <script src="Fireworks.js"></script>
     <script src="interloop.js"></script>
